Fix article headings jump links

--- a/src/styles/components/_components.article.scss
+++ b/src/styles/components/_components.article.scss
@@ -26,6 +26,15 @@
       margin-top: 0.2em;
     }
   }
+
+  h1,
+  h2,
+  h3,
+  hr,
+  h5,
+  h6 {
+    position: relative;
+  }
 }
 
 .c-article__share {
